--- a/c3_index.html
+++ b/c3_index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="Images/favicon.ico">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 		
 	</main>
 	<footer>
-		(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755		
+		&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
 	</footer>
 </body>
 </html>
