--- a/c3_index.html
+++ b/c3_index.html
@@ -9,8 +9,8 @@
 
 <body>
 	<header>
-		San Joaquin Valley Town Hall
-		Celebrating our 75th Year		
+		<h1>San Joaquin Valley Town Hall</h1>
+		<h2>Celebrating our 75th Year</h2>
 	</header>
 	<main>
 		
