--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 	<header>
+		<link rel="Town Hall Logo" href="images/town_hall_logo.gif">
 		<h1>San Joaquin Valley Town Hall</h1>
 		<h2>Celebrating our 75th Year</h2>
 	</header>
