--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
 	<header>
-		<link rel="Town Hall Logo" href="images/town_hall_logo.gif">
+		<link rel="Town Hall Logo" href="images/town_hall_logo.gif" style="height:80px">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our 75th Year</h3>
+		<h2>Our Mission</h2>
+		<p></p>
 	</header>
 	<main>
 		
