--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 		<link rel="Town Hall Logo" href="images/town_hall_logo.gif" style="height:80px">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our 75th Year</h3>
-		<h2>Our Mission</h2>
-		<p></p>
 	</header>
 	<main>
-		
+		<h2>Our Mission</h2>
+		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors.
+			Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform,
+			educate, and entertain our audience! As one or our members told us:</p>
+		<h2>Our Ticket Packages</h2>
+		<ul>
+			<li>Season Package: $95</li>
+			<li>Patron Package: $200</li>
+			<li>Single Speaker: $25</li>
+		</ul>
+		<h1>This season's guest speakers</h1>
 	</main>
 	<footer>
 		&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
