--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<li>Single Speaker: $25</li>
 		</ul>
 		<h1>This season's guest speakers</h1>
+		<h3>October</h3>
 	</main>
 	<footer>
 		&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
