--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<header>
-		<link rel="Town Hall Logo" href="images/town_hall_logo.gif">
+		<img src="images/town_hall_logo.gif" alt="Town Hall Logo" >
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our 75th Year</h3>
 	</header>
@@ -26,7 +26,7 @@
 		</ul>
 		<h1>This season's guest speakers</h1>
 		<h3>October</h3>
-		<link rel="Brancaccio" href="images/brancaccio75.jpg">
+		<img src="images/brancaccio75.jpg" alt="Brancaccio">
 	</main>
 	<footer>
 		&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
