--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<img src="images/brancaccio75.jpg" alt="David Brancaccio">
 	</main>
 	<footer>
-		&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755
+		<p>&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
 </html>
