--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
 	</header>
 	<main>
 		<h2>Our Mission</h2>
-		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors.
-			Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform,
-			educate, and entertain our audience! As one or our members told us:</p>
-			<blockquote>Each year I give a ticket package to each of our family members. I think of it as the gift of
-				knowledge...and that is priceless. </blockquote>
+		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:
+			<q>"Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless." </q></p>
 		<h2>Our Ticket Packages</h2>
 		<ul>
 			<li>Season Package: $95</li>
