--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</ul>
 		<h1>This season's guest speakers</h1>
 		<h3>October</h3>
-		<a>David Brancaccio</a>
+		<a href="speakers/brancaccio.html">David Brancaccio</a>
 		<br>
 		<img src="images/brancaccio75.jpg" alt="David Brancaccio">
 	</main>
