--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 		<a href="speakers/brancaccio.html">David Brancaccio</a>
 		<br>
 		<img src="images/brancaccio75.jpg" alt="David Brancaccio">
+		<br>
+		<a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
+		<br>
+		<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin">
 	</main>
 	<footer>
 		<p>&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
