--- a/speakers/brancaccio.html
+++ b/speakers/brancaccio.html
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="../images/favicon.ico">
 </head>
 
 <body>
     <main>
 	    <h1>David Brancaccio</h1>
-	    <h2>This page is under construction.</h2>	        
+	    <h2>This page is under construction.</h2>
     </main>
 </body>
 
