--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<header>
-		<img src="images/town_hall_logo.gif" alt="Town Hall Logo">
+		<img src="images/town_hall_logo.gif" alt="Town Hall Logo" style="height: 80px">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our 75 <sup>th</sup> Year</h3>
 	</header>
@@ -24,13 +24,9 @@
 			<li>Single Speaker: $25</li>
 		</ul>
 		<h1>This season's guest speakers</h1>
-		<h3>October</h3>
-		<a href="speakers/brancaccio.html">David Brancaccio</a>
-		<br>
+		<h3>October <br> <a href="speakers/brancaccio.html">David Brancaccio</a></h3>
 		<img src="images/brancaccio75.jpg" alt="David Brancaccio">
-		<br>
-		<a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
-		<br>
+		<h3><br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin">
 	</main>
 	<footer>
